--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
             <!-- Categories Nav Start -->
             <nav style="display: flex; gap: 25px; font-size: 14px; margin-top: 35px; position: sticky; top: 47.5px; background-color: #0f0f0f; padding-top: 15px; padding-bottom: 5px;">
-                <div class="categories"  style="border-bottom: 2px solid white;"><a href="./home.html" style="color: white;">Home</a></div>
+                <div class="categories"  style="border-bottom: 2px solid white;"><a href="./index.html" style="color: white;">Home</a></div>
                 <div class="categories"><a href="./videos.html">Videos</a></div>
                 <div class="categories"><a href="./shorts.html">Shorts</a></div>
                 <div class="categories"><a href="./playlists.html">Playlists</a></div>
